exceptions and jooq